# VeraRAG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ALTERNATIVE_APIS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_PROGRESS.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  demo.py  demo_local.py  environment.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run_web.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  scorecard.yml  test.yml
configs/: __init__.py  ckt_conflict.yaml  deepseek_rules_only.yaml  deepseek_run.yaml  fever.yaml  hotpotqa.yaml  model.yaml  verabench_v112_canonical.yaml  verabench_v112_guarded_gate18_ids.txt  verabench_v112_retrieval_adaptive.yaml  verabench_v112_retrieval_adaptive_top3.yaml  verabench_v112_retrieval_rerank_expanded_guarded.yaml  verabench_v112_retrieval_rerank_targeted_guarded.yaml  verabench_v112_retrieval_rerank_top3.yaml  verabench_v112_retrieval_rerank_top3_guarded.yaml
data/processed/: .gitkeep
data/verabench/: corpus.jsonl  questions.jsonl
docs/: API.md  ARCHITECTURE.md  EVALUATION.md  GPU_TRAINING.md  RELEASING.md  RESULTS.md  ROADMAP.md  VERABENCH_CARD.md
docs/assets/: verabench_v112_stage3_stabilized_posthoc_platt_risk_coverage.csv  verabench_v11_group_calibrated_risk_coverage.csv
docs/superpowers/plans/: 2026-05-04-complete-unfinished-features.md  2026-05-26-web-ui.md
docs/superpowers/specs/: 2026-05-04-complete-unfinished-features-design.md  2026-05-26-web-ui-design.md
examples/: quickstart.py
experiments/: analyze_verabench_results.py  audit_conflict_model.py  audit_verabench_contamination.py  build_conflict_training_data.py  build_external_annotation_packet.py  build_index.py  build_verabench_leaderboard.py  calibrate_verabench_confidence.py  calibration_curve.py  compare_conflict_detectors.py  compare_verabench_reports.py  compile_external_annotations.py  doctor.py  evaluate_retrieval.py  filter_verabench_report.py  generate_release_checksums.py  generate_sbom.py  merge_verabench_reports.py  plan_retrieval_ablation.py  repair_verabench_checkpoint.py  rescore_verabench.py  run_ablation.py  run_baselines.py  run_ckt_conflict.py  run_conflict_ablation.py  run_fever.py  run_hotpotqa.py  run_verabench.py  scan_secrets.py  train_conflict_cross_encoder.py  validate_configs.py  validate_dependency_metadata.py  validate_deployment.py  validate_docs.py  validate_examples.py  validate_external_conflict_set.py  validate_installed_wheel.py  validate_package_contents.py  validate_precommit.py  validate_project_metadata.py  (+6 more)
experiments/baselines/: __init__.py  hybrid_rag.py  self_rag.py  vanilla_rag.py
paper/figures/: architecture.html
paper/tables/: ablation_results.html  conflict_detection.html  verabench_overview.html
results/: verabench_full.json  verabench_full_v2.json  verabench_full_v3.json
scripts/: build_index.sh  check_windows_conflict_training_ready.sh  download_datasets.py  download_datasets.sh  evaluate.sh  migrate_verabench_ontology_v11.py  migrate_verabench_span_traceability_v112.py  run_baselines.sh  start_windows_conflict_training.sh  start_windows_conflict_training_matrix.sh  start_windows_verabench_eval.sh  sync_windows_gpu.sh  validate_difficulty.py  windows_gpu_status.sh
src/: __init__.py
src/agents/: __init__.py  base.py  planner.py  reasoning_agent.py  repair_agent.py  retrieval_agent.py  task_analyzer.py  verifier_agent.py
src/benchmark/: __init__.py  conflict_pairs.py  contamination.py  evaluator.py  external_annotations.py  loader.py
src/benchmark/data/verabench/: questions.jsonl
src/evaluation/: __init__.py  answer_metrics.py  calibration_metrics.py  conflict_metrics.py  evidence_metrics.py  hallucination_metrics.py  statistics.py
src/evidence/: __init__.py  conflict_graph.py  evidence_scorer.py  extractor.py  normalizer.py
src/ingestion/: __init__.py  chunker.py  loader.py  pipeline.py
src/pipeline/: __init__.py  verarag.py
src/retriever/: __init__.py  base.py  bm25.py  dense.py  hybrid.py  reranker.py
src/uncertainty/: __init__.py  calibrator.py  controller.py  estimator.py
src/utils/: __init__.py  data_structures.py  llm_client.py  model_cache.py
tests/: __init__.py  conftest.py  run_tests.sh  test_agents.py  test_benchmark.py  test_calibration_curve.py  test_compare_verabench_reports.py  test_config_loader.py  test_config_validation.py  test_conflict_detection.py  test_conflict_model_audit.py  test_conflict_pairs.py  test_contamination_audit.py  test_data_structures.py  test_dependency_metadata.py  test_deployment_validation.py  test_docs_validation.py  test_doctor.py  test_e2e_real_llm.py  test_entity_conflict.py  test_evaluation_metrics.py  test_evidence_modules.py  test_examples.py  test_external_conflict_annotations.py  test_filter_verabench_report.py  test_gpu_training_scripts.py  test_ingestion.py  test_installed_wheel_validation.py  test_integration.py  test_leaderboard.py  test_llm_client.py  test_merge_verabench_reports.py  test_package_validation.py  test_posthoc_calibration.py  test_precommit_validation.py  test_project_metadata.py  test_public_api.py  test_python_support.py  test_query_variants.py  test_refine_plan.py  (+17 more)
verarag/: __init__.py  benchmark.py  pipeline.py
web/: __init__.py  api.py  app.py  db.py
web/static/: app.js
web/templates/: base.html  detail.html  history.html  index.html
